--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
-<script src= 'firebase' type="module"></script>
+
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4884786427235490"
      crossorigin="anonymous"></script>
+
 
 <link href="maps_styles.css" rel="stylesheet">
 
@@ -22,8 +23,109 @@ body { margin: 0; padding: 0; }
 
 <body>
 
+    <!-- Correct usage in HTML -->
+   
+
+    <!-- <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyCPTIAjkP6qFhqw1Y2JkO6YTqsM99uualA",
+          authDomain: "fam-radar.firebaseapp.com",
+          projectId: "fam-radar",
+          storageBucket: "fam-radar.appspot.com",
+          messagingSenderId: "644911681418",
+          appId: "1:644911681418:web:2e5dfccdc1bf7d8e5fc273",
+          measurementId: "G-LZJTPZLG8G"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+    </script> -->
+
+
+
+  <style>
+    .listing-group {
+        font:
+            12px/20px 'Helvetica Neue',
+            Arial,
+            Helvetica,
+            sans-serif;
+        font-weight: 600;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 1;
+        border-radius: 3px;
+        max-width: 20%;
+        color: #fff;
+    }
+
+    .listing-group input[type='checkbox']:first-child + label {
+        border-radius: 3px 3px 0 0;
+    }
+
+    .listing-group label:last-child {
+        border-radius: 0 0 3px 3px;
+        border: none;
+    }
+
+    .listing-group input[type='checkbox'] {
+        display: none;
+    }
+
+    .listing-group input[type='checkbox'] + label {
+        background-color: #3386c0;
+        display: block;
+        cursor: pointer;
+        padding: 10px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+    }
+
+    .listing-group input[type='checkbox'] + label {
+        background-color: #3386c0;
+        text-transform: capitalize;
+    }
+
+    .listing-group input[type='checkbox'] + label:hover,
+    .listing-group input[type='checkbox']:checked + label {
+        background-color: #4ea0da;
+    }
+
+    .listing-group input[type='checkbox']:checked + label:before {
+        content: '✔';
+        margin-right: 5px;
+    }
+</style>
+
+
 
 <div id="map"></div>
+
+<nav id="li" class="listing-group">
+  <!-- <input type="checkbox" id="scrollZoom" checked="checked">
+  <label for="scrollZoom">Scroll zoom</label>
+  <input type="checkbox" id="boxZoom" checked="checked">
+  <label for="boxZoom">Box zoom</label>
+  <input type="checkbox" id="dragRotate" checked="checked">
+  <label for="dragRotate">Drag rotate</label>
+  <input type="checkbox" id="dragPan" checked="checked">
+  <label for="dragPan">Drag pan</label>
+  <input type="checkbox" id="keyboard" checked="checked">
+  <label for="keyboard">Keyboard</label>
+  <input type="checkbox" id="doubleClickZoom" checked="checked">
+  <label for="doubleClickZoom">Double click zoom</label>
+  <input type="checkbox" id="touchZoomRotate" checked="checked">
+  <label for="touchZoomRotate">Touch zoom rotate</label> -->
+</nav>
 
 <div class="map-overlay top">
     <div class="map-overlay-inner">
@@ -56,6 +158,10 @@ body { margin: 0; padding: 0; }
     </div>
 </div>
 
+<script type="module" src="firebase.js"></script>
+
 <script src="map.js"></script>
+
+
 
 </body>
